footer.html header.html service.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>web2-git-class</title>
 </head>
 <body>
+    <header>
+        <h1>My git class class</h1>
+        <h2>its  was stressfull</h2>
+        <h3>its was interesting</h3>
+        <h4>Come on, amma coder</h4>
+        <h5>hello world</h5>
+        <h6>My website</h6>
+    </header>
     
 </body>
 </html>
